# GBCore

./: .gitignore  CMakeLists.txt  README
_bin/: Makefile
src/: ConstructionContainer.h  Geometry.cpp  Geometry.h  GeometryConstruction.cpp  GeometryConstruction.h  Utils.h
tests/: ConstructionContainerTests.cpp  ConstructionContainerTests.h  GeometryConstructionTests.cpp  GeometryConstructionTests.h  TestsLauncher.cpp  Utils.cpp  Utils.h  construction1.txt  construction2.txt  pappus_construction.txt
tests/google-tests/: Geometry_UnitTest.cpp  TestsLauncher.cpp
tests/my-tests/: ConstructionContainerTests.cpp  ConstructionContainerTests.h  GeometryConstructionTests.cpp  GeometryConstructionTests.h  construction3.txt
